Index page little bit text changed.

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Greatness Free Template</h1>
-							<h2>Free html5 templates Made by <a href="http://FreeHTML5.co/" target="_blank">FreeHTML5.co</a></h2>
+							<h1>Deepak Kumar Sharma</h1>
+							<h2>This page Made by <a href="https://dkhandalsarvika.github.io/" target="_blank">Deepak Khandal</a></h2>
 							<p>
 								<a href="#" class="btn btn-primary btn-lg">Get Started</a> 
 								<a href="#" class="btn btn-white btn-outline btn-lg">Download</a></p>
