--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
 	</head>
 	<body>
 		
