--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
 	</head>
 	<body>
