--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
+	<!-- Favicon icon -->
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -51,7 +54,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+	
 
 	</head>
 	<body>
